Refactor: Implement Server-Authoritative Gameplay Architecture
This commit refactors the entire gameplay architecture from a client-side model to a robust, server-authoritative system. This resolves numerous bugs related to race conditions, synchronization, and security.

- Decomposed the `NewPlayerBehavior` "God Class" into specialized components for health (`PlayerHealth`) and status effects (`PlayerStatusEffects`).

- Made all health, damage, death, and respawn logic server-authoritative within the new `PlayerHealth` component.

- Refactored the spell system to be server-authoritative. Movement and collision are now handled exclusively on the server in `FixedUpdate`.

- Fixed projectile ownership on spawn by using `ServerRpcParams` to correctly assign ownership to the casting client, resolving self-hit bugs.

- Converted the `PlayerController` to use a physics-based `Rigidbody` system for smoother, camera-relative movement and rotation.

- Optimized player animations to use the `NetworkAnimator` component, removing inefficient per-frame RPCs.

- Resolved circular assembly dependencies between Player and Spells by introducing an `IDamageable` interface in a `Core` assembly.

- Fixed initial player spawn location by setting it correctly in the `ConnectionApprovalCallback`.

--- a/Assets/Scripts/Networking/Networking.asmdef
+++ b/Assets/Scripts/Networking/Networking.asmdef
@@ -33,7 +33,8 @@
         "GUID:03058786646e84a4587858e9302c3f41",
         "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
         "GUID:7c420cda537866246a9ce1843004463d",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:4c63551c8162e7b40a61e1b976dbdf95"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
