--- a/Assets/Scripts/Player/Player.asmdef
+++ b/Assets/Scripts/Player/Player.asmdef
@@ -46,7 +46,8 @@
         "GUID:457756d89b35d2941b3e7b37b4ece6f1",
         "GUID:304b399c7a7ca8f45afdcd73cf5552b3",
         "GUID:5b5e144fbbfa9e24188cdc68fa9a4b3c",
-        "GUID:9e24947de15b9834991c9d8411ea37cf"
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:4c63551c8162e7b40a61e1b976dbdf95"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
