Added gitignore and pushing meta changes

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
+*.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
@@ -78,3 +79,4 @@ crashlytics-build.properties
 
 # IDE
 .idea/
+
